portfolio-dev/dashboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: portfolio-dashboard
  name: portfolio-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-dashboard
  template:
    metadata:
      labels:
        app: portfolio-dashboard
    spec:
      nodeSelector:
        kubernetes.io/hostname: eee101.tokyotech.org
      containers:
        - image: ghcr.io/traptitech/traportfolio-dashboard:main@sha256:14f7a4e0543f82a95091c36d2c3242b52509cd079310e19d376f671f8711187a
          name: portfolio-dashboard
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: "10m"
              memory: "16Mi"
            limits:
              cpu: "100m"
              memory: "64Mi"
      restartPolicy: Always
