portfolio-dev/dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: portfolio-dev-dashboard
  name: portfolio-dev-dashboard
spec:
  ports:
    - name: "3015"
      port: 3015
      targetPort: 80
  selector:
    app: portfolio-dev-dashboard
